Code cleanup and getting the examples to run. It’s still a way to go for coherency.